--- a/src/Makefile
+++ b/src/Makefile
@@ -90,7 +90,8 @@ OBJ := WELL19937a_new.o \
        pic2d_SEEmission.o \
        pic2d_IonEmissions.o \
        pic2d_ExternalCircuits.o \
-       pic2d_ExternalCircuit_PS_Voltages.o
+       pic2d_ExternalCircuit_PS_Voltages.o \
+       pic2d_ElectronCoulombScattering_rescale_2.o
 
 edipic2d : version_info $(OBJ) 
 	$(FC) $(FFLAGS) -o $@ $(OBJ) $(LIBS)
